2005-11-07  Darin Adler  <darin@apple.com>

        Reviewed by Tim Omernick.

        - speed up timers by using CFTimerRunLoopRef instead of NSTimer

        * kwq/KWQObject.h: Removed pauseTimer, resumeTimers, and _addTimer, added timerIntervals and
        restartTimer. Made KWQObjectSenderScope functions be inline.
        * kwq/KWQObject.mm:
        (timerFired): Added. Function called when the CFRunLoopTimerRef fires. Puts the timer into the
        deferred timer array if timers are deferred, otherwise makes a QTimerEvent and calls timerEvent
        on the target.
        (QObject::startTimer): Moved most of the code inside restartTimer. This now just picks a new
        timer ID and calls restartTimer.
        (QObject::restartTimer): Added. Creates a KWQObjectTimer and puts it in a timers dictionary.
        That includes creating a CFRunLoopTimer and scheduling it on the current run loop.
        (QObject::timerIntervals): Added. Looks up a timer and returns the intervals for next time to
        fire and the "fire again" interval.
        (deleteTimer): Added. Invalidates and then removes a timer.
        (QObject::killTimer): Changed to use deleteTimer to do most of its work.
        (deleteOneTimer): Added. Calls deleteTimer.
        (QObject::killTimers): Changed to use deleteOneTimer to do most of its work.
        (sendDeferredTimerEvent): Added. Creates a QTimerEvent and calls timerEvent on the target.
        (sendDeferredTimerEvents): Added. Calls sendDeferredTimerEvent in a loop on all the deferred timers.
        (QObject::setDefersTimers): Updated to call sendDeferredTimerEvents as needed.

        * kwq/KWQTimer.h:
        (QTimer::QTimer): Made constructor inline and removed the optional parameter.
        (QTimer::isActive): Made inline.
        (QTimer::fireDate): Added. Inline function.
        Got rid of the NSTimer and added a CFRunLoopTimer.
        * kwq/KWQTimer.mm:
        (timerFired): Added. Calls fire on the QTimer object.