@@ -1,0 +1,11 @@
+<html>
+<body onload="alert('FAIL: onload fired')" onunload="alert('FAIL: onunload fired')">
+<script>
+window.close();
+alert('PASS: same script tag after close');
+</script>
+<script>
+alert('FAIL: different script tag after close');
+</script>
+</body>
+</html>
