@@ -1,0 +1,7 @@
+<html>
+<body onload="window.print()">
+<script>
+window.close()
+</script>
+</body>
+</html>
