@@ -1,0 +1,18 @@
+<html>
+<body>
+<p>This test checks a window.close called in the midst of parsing a page.
+   Click the buttons below to load the test pages.
+</p>
+<hr>
+<input type=button value="Run Test 1" onclick='window.open("resources/window-close-during-parsing-popup1.html")'>
+<p>If this test passes, you should see 'PASS: same script tag after close,'
+   but nothing else. In particular, you should not see onload or onunload 
+   fire.
+</p>
+<hr>
+<input type=button value="Run Test 2" onclick='window.open("resources/window-close-during-parsing-popup2.html")'>
+<p>If this test passes, you should see a window open and then close.
+   If it fails, Safari will crash.
+</p>
+</body>
+</html>
